--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -704,7 +704,7 @@
 	      </child>
 
 	      <child>
-		<widget class="Custom" id="custom1">
+		<widget class="Custom" id="helpBrowser">
 		  <property name="visible">True</property>
 		  <property name="creation_function">gtk_moz_embed_new</property>
 		  <property name="int1">0</property>
