--- a/trunk/gtk.mod/IDE/ide.glade
+++ b/trunk/gtk.mod/IDE/ide.glade
@@ -7,7 +7,7 @@
   <property name="visible">True</property>
   <property name="title" translatable="yes">BMax-Editor</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_NONE</property>
+  <property name="window_position">GTK_WIN_POS_CENTER</property>
   <property name="modal">False</property>
   <property name="default_width">800</property>
   <property name="default_height">500</property>
@@ -622,6 +622,8 @@
 
       <child>
 	<widget class="GtkNotebook" id="notebook3">
+	  <property name="width_request">800</property>
+	  <property name="height_request">600</property>
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
 	  <property name="show_tabs">True</property>
